gcc/testsuite/rust/rustc/ui/resolve/resolve-conflict-import-vs-extern-crate.rs
use std::slice as std; // { dg-error ".E0254." "" { target *-*-* } }

fn main() {
}

